--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cheerio": "^1.0.0-rc.10",
+    "cli-spinner": "^0.2.10",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "puppeteer": "^13.1.3",
