--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "cli-spinner": "^0.2.10",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "prettier": "^2.5.1",
     "puppeteer": "^13.1.3",
     "website-scraper": "^5.0.0",
     "website-scraper-puppeteer": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3"
   }
 }
