--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "chalk": "^5.0.1",
     "cheerio": "^1.0.0-rc.10",
     "cli-spinner": "^0.2.10",
     "express": "^4.17.2",
