--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier": "^2.5.1",
     "puppeteer": "^13.1.3",
     "website-scraper": "^5.0.0",
-    "website-scraper-puppeteer": "^1.0.0"
+    "website-scraper-puppeteer": "^1.0.0",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
