--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "type": "module",
   "main": "index.js",
   "license": "MIT",
+  "jest": {
+    "verbose": true
+  },
+  "scripts": {
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
+  },
   "dependencies": {
     "body-parser": "^1.19.1",
     "chalk": "^5.0.1",
     "cheerio": "^1.0.0-rc.10",
     "cli-spinner": "^0.2.10",
     "express": "^4.17.2",
+    "jest": "^27.5.1",
     "morgan": "^1.10.0",
     "prettier": "^2.5.1",
     "puppeteer": "^13.1.3",
