--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
+          cache-dependency-path: yarn.lock 
 
       - name: Install dependencies
-        run: |
-          yarn
+        run: yarn
       - name: Run tests
-        run: |
-          yarn test
+        run: yarn test
