--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Lint
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -25,5 +25,5 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Run tests
-        run: yarn test
+      - name: Run linter
+        run: yarn lint 
